@@ -1204,7 +1204,7 @@ genius> 2*2 mod 7
 
       <variablelist>
         <varlistentry>
-         <term><synopsis>a;b</synopsis></term>
+         <term><userinput>a;b</userinput></term>
          <listitem>
            <para>
              The separator, just evaluates both
@@ -1218,7 +1218,7 @@ genius> 2*2 mod 7
 
 
         <varlistentry>
-         <term><synopsis>a=b</synopsis></term>
+         <term><userinput>a=b</userinput></term>
          <listitem>
            <para>
 	     The assignment operator.  This assigns <varname>b</varname> to
@@ -1232,7 +1232,7 @@ expression is expected)
 
 
         <varlistentry>
-         <term><synopsis>a:=b</synopsis></term>
+         <term><userinput>a:=b</userinput></term>
          <listitem>
            <para>
 	     The assignment operator.  Assigns <varname>b</varname> to
@@ -1245,7 +1245,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>|a|</synopsis></term>
+         <term><userinput>|a|</userinput></term>
          <listitem>
            <para>
              Absolute value or modulus (if <varname>a</varname>
@@ -1260,7 +1260,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a^b</synopsis></term>
+         <term><userinput>a^b</userinput></term>
          <listitem>
            <para>
              Exponentiation, raises <varname>a</varname> to the <varname>b</varname>th power.
@@ -1270,7 +1270,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a.^b</synopsis></term>
+         <term><userinput>a.^b</userinput></term>
          <listitem>
            <para>
 	     Element by element exponentiation.  Raise each element of a matrix
@@ -1287,7 +1287,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a+b</synopsis></term>
+         <term><userinput>a+b</userinput></term>
          <listitem>
            <para>
              Addition.  Adds two numbers, matrices, functions or strings.  If
@@ -1300,7 +1300,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a-b</synopsis></term>
+         <term><userinput>a-b</userinput></term>
          <listitem>
            <para>
              Subtraction.  Subtract two numbers, matrices or functions.
@@ -1310,7 +1310,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a*b</synopsis></term>
+         <term><userinput>a*b</userinput></term>
          <listitem>
            <para>
              Multiplication.  This is the normal matrix multiplication.
@@ -1320,7 +1320,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a.*b</synopsis></term>
+         <term><userinput>a.*b</userinput></term>
          <listitem>
            <para>
 	     Element by element multiplication if <varname>a</varname> and
@@ -1331,7 +1331,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a/b</synopsis></term>
+         <term><userinput>a/b</userinput></term>
          <listitem>
            <para>
 		   Division.  When <varname>a</varname> and <varname>b</varname> are just numbers
@@ -1343,7 +1343,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a./b</synopsis></term>
+         <term><userinput>a./b</userinput></term>
          <listitem>
            <para>
 		   Element by element division.  Same as <userinput>a/b</userinput> for
@@ -1354,7 +1354,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a\b</synopsis></term>
+         <term><userinput>a\b</userinput></term>
          <listitem>
            <para>
              Back division.  That is this is the same as <userinput>b/a</userinput>.
@@ -1364,7 +1364,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a.\b</synopsis></term>
+         <term><userinput>a.\b</userinput></term>
          <listitem>
            <para>
              Element by element back division.
@@ -1374,7 +1374,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a%b</synopsis></term>
+         <term><userinput>a%b</userinput></term>
          <listitem>
            <para>
 	     The mod operator.  This does not turn on the <link
@@ -1386,7 +1386,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a.%b</synopsis></term>
+         <term><userinput>a.%b</userinput></term>
          <listitem>
            <para>
              Element by element the mod operator.  Returns the remainder
@@ -1397,7 +1397,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a mod b</synopsis></term>
+         <term><userinput>a mod b</userinput></term>
          <listitem>
            <para>
              Modular evaluation operator.  The expression <varname>a</varname>
@@ -1410,7 +1410,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a!</synopsis></term>
+         <term><userinput>a!</userinput></term>
          <listitem>
            <para>
              Factorial operator.  This is like
@@ -1421,7 +1421,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a!!</synopsis></term>
+         <term><userinput>a!!</userinput></term>
          <listitem>
            <para>
              Double factorial operator.  This is like
@@ -1432,7 +1432,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a==b</synopsis></term>
+         <term><userinput>a==b</userinput></term>
          <listitem>
            <para>
 	     Equality operator.
@@ -1444,7 +1444,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a!=b</synopsis></term>
+         <term><userinput>a!=b</userinput></term>
          <listitem>
            <para>
              Inequality operator,
@@ -1456,7 +1456,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a&lt;&gt;b</synopsis></term>
+         <term><userinput>a&lt;&gt;b</userinput></term>
          <listitem>
            <para>
              Alternative inequality operator,
@@ -1468,7 +1468,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a&lt;=b</synopsis></term>
+         <term><userinput>a&lt;=b</userinput></term>
          <listitem>
            <para>
              Less than or equal operator,
@@ -1483,7 +1483,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a&gt;=b</synopsis></term>
+         <term><userinput>a&gt;=b</userinput></term>
          <listitem>
            <para>
              Greater than or equal operator,
@@ -1497,7 +1497,7 @@ different from <literal>=</literal> because it never gets translated to a
         </varlistentry>
 
         <varlistentry>
-         <term><synopsis>a&lt;b</synopsis></term>
+         <term><userinput>a&lt;b</userinput></term>
          <listitem>
            <para>
              Less than operator,
@@ -1512,7 +1512,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a&gt;b</synopsis></term>
+         <term><userinput>a&gt;b</userinput></term>
          <listitem>
            <para>
              Greater than operator,
@@ -1527,7 +1527,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a&lt;=&gt;b</synopsis></term>
+         <term><userinput>a&lt;=&gt;b</userinput></term>
          <listitem>
            <para>
 	     Comparison operator.  If <varname>a</varname> is equal to
@@ -1541,7 +1541,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a and b</synopsis></term>
+         <term><userinput>a and b</userinput></term>
          <listitem>
            <para>
 		   Logical and.  Returns true if both
@@ -1554,7 +1554,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a or b</synopsis></term>
+         <term><userinput>a or b</userinput></term>
          <listitem>
            <para>
              Logical or.
@@ -1568,7 +1568,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a xor b</synopsis></term>
+         <term><userinput>a xor b</userinput></term>
          <listitem>
            <para>
              Logical xor.
@@ -1582,7 +1582,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>not a</synopsis></term>
+         <term><userinput>not a</userinput></term>
          <listitem>
            <para>
 		   Logical not.  Returns the logical negation of <varname>a</varname>
@@ -1592,7 +1592,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>-a</synopsis></term>
+         <term><userinput>-a</userinput></term>
          <listitem>
            <para>
              Negation operator.  Returns the negative of a number or a matrix (works elementwise on a matrix).
@@ -1602,7 +1602,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>&amp;a</synopsis></term>
+         <term><userinput>&amp;a</userinput></term>
          <listitem>
            <para>
              Variable referencing (to pass a reference to a variable).
@@ -1613,7 +1613,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>*a</synopsis></term>
+         <term><userinput>*a</userinput></term>
          <listitem>
            <para>
              Variable dereferencing (to access a referenced variable).
@@ -1624,7 +1624,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a'</synopsis></term>
+         <term><userinput>a'</userinput></term>
          <listitem>
            <para>
 		   Matrix conjugate transpose.  That is, rows and columns get swapped and we take complex conjugate of all entries.  That is
@@ -1635,7 +1635,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a.'</synopsis></term>
+         <term><userinput>a.'</userinput></term>
          <listitem>
            <para>
              Matrix transpose, does not conjugate the entries.  That is, 
@@ -1646,7 +1646,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a@(b,c)</synopsis></term>
+         <term><userinput>a@(b,c)</userinput></term>
          <listitem>
            <para>
 	     Get element of a matrix in row <varname>b</varname> and column
@@ -1659,7 +1659,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a@(b,)</synopsis></term>
+         <term><userinput>a@(b,)</userinput></term>
          <listitem>
            <para>
              Get row of a matrix (or multiple rows if <varname>b</varname> is a vector).
@@ -1669,7 +1669,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a@(b,:)</synopsis></term>
+         <term><userinput>a@(b,:)</userinput></term>
          <listitem>
            <para>
              Same as above.
@@ -1679,7 +1679,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a@(,c)</synopsis></term>
+         <term><userinput>a@(,c)</userinput></term>
          <listitem>
            <para>
 	     Get column of a matrix (or columns if <varname>c</varname> is a
@@ -1690,7 +1690,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a@(:,c)</synopsis></term>
+         <term><userinput>a@(:,c)</userinput></term>
          <listitem>
            <para>
              Same as above.
@@ -1700,7 +1700,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a@(b)</synopsis></term>
+         <term><userinput>a@(b)</userinput></term>
          <listitem>
            <para>
              Get an element from a matrix treating it as a vector.  This will
@@ -1711,7 +1711,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a:b</synopsis></term>
+         <term><userinput>a:b</userinput></term>
          <listitem>
            <para>
              Build a vector from <varname>a</varname> to <varname>b</varname> (or specify a row, column region for the <literal>@</literal> operator).  For example to get rows 2 to 4 of matrix <varname>A</varname> we could do
@@ -1725,7 +1725,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>a:b:c</synopsis></term>
+         <term><userinput>a:b:c</userinput></term>
          <listitem>
            <para>
 	     Build a vector from <varname>a</varname> to <varname>c</varname>
@@ -1761,7 +1761,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>(a)i</synopsis></term>
+         <term><userinput>(a)i</userinput></term>
          <listitem>
            <para>
 	     Make a imaginary number (multiply <varname>a</varname> by the
@@ -1775,7 +1775,7 @@ different from <literal>=</literal> because it never gets translated to a
 
 
         <varlistentry>
-         <term><synopsis>`a</synopsis></term>
+         <term><userinput>`a</userinput></term>
          <listitem>
            <para>
              Quote an identifier so that it doesn't get evaluated.  Or
@@ -1785,7 +1785,7 @@ different from <literal>=</literal> because it never gets translated to a
         </varlistentry>
 
         <varlistentry>
-         <term><synopsis>a swapwith b</synopsis></term>
+         <term><userinput>a swapwith b</userinput></term>
          <listitem>
            <para>
 		   Swap value of <varname>a</varname> with the value
@@ -1798,7 +1798,7 @@ different from <literal>=</literal> because it never gets translated to a
         </varlistentry>
 
         <varlistentry>
-         <term><synopsis>increment a</synopsis></term>
+         <term><userinput>increment a</userinput></term>
          <listitem>
            <para>
 		   Increment the variable <varname>a</varname> by 1.  If
@@ -1811,7 +1811,7 @@ different from <literal>=</literal> because it never gets translated to a
         </varlistentry>
 
         <varlistentry>
-         <term><synopsis>increment a by b</synopsis></term>
+         <term><userinput>increment a by b</userinput></term>
          <listitem>
            <para>
 		   Increment the variable <varname>a</varname> by <varname>b</varname>.  If
