@@ -8,5 +8,18 @@ image_DATA = \
 EXTRA_DIST = \
 	$(image_DATA)
 
-install-data-hook:
-	$(GTK_UPDATE_ICON_CACHE) -q -t $(datadir)/icons/hicolor
+run_gtk_update_icon_cache = $(GTK_UPDATE_ICON_CACHE) -f -t $(datadir)/icons/hicolor
+
+update-icon-cache:
+	@-if test -z "$(DESTDIR)"; then \
+		echo "Updating GTK icon cache."; \
+		$(run_gtk_update_icon_cache); \
+	else \
+		echo "*** Icon cache not updated.  After install, run this:"; \
+		echo "***   $(run_gtk_update_icon_cache)"; \
+	fi
+
+install-data-hook: update-icon-cache
+uninstall-hook: update-icon-cache
+
+
