@@ -1,3 +1,12 @@
+Thu Aug 21 18:08:53 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* pixmaps/Makefile.am: fix gtk-update-icon-cache logic
+
+	* help/C/genius.xml, help/C/make-and-upload.sh: use userinput instead
+	  of synopsis in the list of operators, the thing is, "synopsis" was
+	  tripping up dblatex which produces an actually sane pdf so we
+	  definitely want to use it
+
 Thu Aug 21 16:55:25 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/calc.c, src/compil.c: change the encoding/decoding of strings
